--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>Interdisciplinary Final Project</title>
 </head>
 
-<table=balck width=100%>
+<table border=black width=100%>
 
 <tr>
 <td><b>NAME</b></td>
