--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
 <td><b>Arévalo</b></td>
 </tr>
 
+<tr>
+<td><b>Juan Esteban</b></td>
+<td><b>Dupont</b></td>
+</tr>
+
 
 </table>
 
@@ -22,7 +27,9 @@
   <body>
     
   <h1>QUESTIONS</h1>
-  <p>
+  <p> 1. Should we have an opinion, a belief or knowledge about limits of technology? Why? 
+
+      2. Do you think that technology improves or inhibits our knowledge tools and skills? Why?
     </p>
 
 
