--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
   <body>
     
   <h1>QUESTIONS</h1>
-  <p> 1. Should we have an opinion, a belief or knowledge about limits of technology? Why? 
+  <p> 1. Should we have an opinion, a belief or knowledge about limits of technology? Why? <br>
 
       2. Do you think that technology improves or inhibits our knowledge tools and skills? Why?
     </p>
 
-
+<p></p>
 
 </body>
 
