--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 
 
   <body>
-    
-  <h1>QUESTIONS</h1>
+  <h1><b>EPISODE:</b>White Christmas</h1>  
+  <h2>QUESTIONS</h2>
   <p> 1. Should we have an opinion, a belief or knowledge about limits of technology? Why? <br>
 
       2. Do you think that technology improves or inhibits our knowledge tools and skills? Why?
