--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </table>
 
 
-  <body>
+  <body bgcolor="blue">
   <h1><b>EPISODE:</b>White Christmas</h1>  
   <h2>QUESTIONS</h2>
   <p> 1. Should we have an opinion, a belief or knowledge about limits of technology? Why? <br>
