--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
   <body bgcolor="#66F217">
   <h1><b>EPISODE:</b>White Christmas</h1>  
-  <h2>QUESTIONS</h2>
+  <h2><font color="blue">QUESTIONS</font></h2>
   <p> 1. Should we have an opinion, a belief or knowledge about limits of technology? Why? <br>
 
       2. Do you think that technology improves or inhibits our knowledge tools and skills? Why?
