--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
 <table border=black width=100%>
 
 <tr>
-<td><b>NAME</b></td>
-<td><b>LAST NAME</b></td>
+<td bgcolor="yellow"><b>NAME</b></td>
+<td bgcolor="yellow"><b>LAST NAME</b></td>
 </tr>
 
 <tr>
-<td><b>Fabricio</b></td>
-<td><b>Arévalo</b></td>
+<td bgcolor="red"><b>Fabricio</b></td>
+<td bgcolor="red"><b>Arévalo</b></td>
 </tr>
 
 <tr>
-<td><b>Juan Esteban</b></td>
-<td><b>Dupont</b></td>
+<td bgcolor="red"><b>Juan Esteban</b></td>
+<td bgcolor="red"><b>Dupont</b></td>
 </tr>
 
 
