--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>Interdisciplinary Final Project</title>
 </head>
 
-<table border="black" width=100%>
+<table bgcolor="black" border="black" width=100%>
 
 <tr>
 <td bgcolor="yellow"><b>NAME</b></td>
