--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
       2. Do you think that technology improves or inhibits our knowledge tools and skills? Why?
     </font></p>
-
+  <h3><font color="purple">Video</font></h3>
 <p></p>
 
 </body>
