--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
       2. Do you think that technology improves or inhibits our knowledge tools and skills? Why?
     </font></p>
   <h3><font size=10><font color="purple">Video</font></font></h3>
+    <video src="" ></video>
+    
 <p></p>
 
 </body>
