--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
 
       2. Do you think that technology improves or inhibits our knowledge tools and skills? Why?
     </font></p>
+    <img src="http://vignette4.wikia.nocookie.net/black-mirror/images/1/19/0003_blackmirror_1.161.tif.jpg/revision/latest?cb=20161101214120">
   <h3><font size=10><font color="purple">Video</font></font></h3>
-    <video src="" ></video>
+    <video src=""></video>
     
 <p></p>
 
