--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </table>
 
 
-  <body bgcolor="#66F217">
+  <body bgcolor="#15DDF5">
   <h1><b>EPISODE:</b>White Christmas</h1>  
   <h2><font color="blue">QUESTIONS</font></h2>
   <p><font color="#F217B0"> 1. Should we have an opinion, a belief or knowledge about limits of technology? Why? <br>
