--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <title>Interdisciplinary Final Project</title>
 </head>
-
+<link rel="shortcut icon" href="http://orig09.deviantart.net/af3d/f/2016/019/6/c/black_mirror_folder_icon_by_andreas86-d9ojfcs.png"/>
 <table bgcolor="black" border="black" width=100%>
 
 <tr>
