--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
          widht=300 height=200>
   <h3><font size=10><font color="purple">Video</font></font></h3>
     <video src=""></video>
-    
+    <h4><font color="blue">Symbol</font></h4>
 <p></p>
 
 </body>
