--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 <td bgcolor="yellow"><b>NAME</b></td>
 <td bgcolor="yellow"><b>LAST NAME</b></td>
 </tr>
-
 <tr>
 <td bgcolor="red"><b>Fabricio</b></td>
 <td bgcolor="red"><b>Arévalo</b></td>
@@ -34,7 +33,21 @@
 
       2. Do you think that technology improves or inhibits our knowledge tools and skills? Why?
     </font></p>
-    <img src="http://vignette4.wikia.nocookie.net/black-mirror/images/1/19/0003_blackmirror_1.161.tif.jpg/revision/latest?cb=20161101214120"
+   <p>Over the time our technology has evolved, because we understood and discovered different knowledges and sciences, trying new methods, creating innovative ideas, researching and experimenting are reasons why technology has improved like is right now. Now is necessary for daily life, the devices help us to make things more easier and faster.
+
+We are generating a dependence of the technology, abandoning our personality, opinion, method, capacities to act and think, it is passing the limit.
+
+ 
+
+The technological advancement is inevitable, however it depends by the consumer demand, if the cash invested continues increasing the technology will expand faster. Some belief that this advancement can be dangerous and harmful because the technology will take most aspect of us, so we need it to live, it will go from a character of reality to a character of absolute.
+
+The function of technology is being a tool for their creators that employ them in a certain manner. We must have a limit to avoid that devices, machines, software, robots reduce our intervention, opinion, belief of the reality and reach a point of replace us from labors and activities making them more important.
+
+ 
+
+It depends how we use technology, if for improving the knowledges, skills, life quality it can be useful. But the humans are a little bit selfish, keeping wisdom and power for themselves. Given account of that we have to leave the individualism and work for the common benefit, helping each other with sincere purposes (not for being recognized or respected).
+
+This can be a way of reaching that goal and is necessary to use the technology smartly, without abusing the progress that it had and the most important thing is not use it against others.</p> <img src="http://vignette4.wikia.nocookie.net/black-mirror/images/1/19/0003_blackmirror_1.161.tif.jpg/revision/latest?cb=20161101214120"
          widht=300 height=200>
     
      <a href="https://www.youtube.com/watch?v=jwtMUi-tv6w"> Ir al Video</a>
